--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li ><a href="https://manan5657.github.io/cv/"class="nav">About</a></li>
             <li ><a href="gallery.html"class="nav">Gallery</a></li>
             <li class="leftpp"><a href="https://manan5657.github.io/cv/"><img src="image/me.svg" alt="profilepic1" height="110px" width="110px"></a></li>
-            <li class="searchli"><input type="search" name="search" id="search" class="search" placeholder="       ** Search in this section **"></li>
+            <li class="searchli"><input type="search" class="search" placeholder="** Search in this section**"></li>
         </ul>
         <img class = "top-cloud" src="image/cloud.png" alt="cloud">
         <br><br><br>
