--- a/gallery.html
+++ b/gallery.html
@@ -5,11 +5,11 @@
     <title>Gallery</title>
 </head>
 <body style="background-color: black;">
-    <img src="image/g3.jpg" alt="Gallery" width="614" height="850">
-    <img src="image/g2.jpg" alt="Gallery" width="634" height="850">
-    <img src="image/g4.jpg" alt="Gallery" width="630" height="850">
-    <img src="image/g5.jpg" alt="Gallery" width="700" height="900">
-    <img src="image/g1.jpg" alt="Gallery" width="1180" height="900" usemap="#friends">
+    <img src="image/g3.jpg" alt="Gallery" style="width: 38.375rem; height: 53.125rem;">
+    <img src="image/g2.jpg" alt="Gallery" style="width: 39.625rem; height: 53.125rem;">
+    <img src="image/g4.jpg" alt="Gallery" style="width: 39.375rem; height: 53.125rem;">
+    <img src="image/g5.jpg" alt="Gallery" style="width: 43.75rem; height: 56.25rem;">
+    <img src="image/g1.jpg" alt="Gallery" style="width: 73.75rem; height: 56.25rem;" usemap="#friends">
     <map name="friends">
         <area alt="me" href="https://www.linkedin.com/in/manan-bhasin-72520a1b4/" coords="128,473,72" shape="circle">
         <area alt="prabhat" href="https://www.chitkara.edu.in/" coords="332,481,81" shape="circle">
@@ -17,14 +17,14 @@
         <area alt="romit" href="https://www.chitkara.edu.in/" coords="750,483,105" shape="circle">
         <area alt="rohit" href="https://www.chitkara.edu.in/" coords="1197,448,228" shape="circle">
     </map>
-    <video width="900" height="700" controls>
+    <video style = "width:56.25rem; height:43.75rem;" controls>
         <source src="image/20230113_195039.mp4" type="video/mp4">
         Hello
     </video>
-    <video width="900" height="700" controls>
+    <video style = "width:56.25rem; height:43.75rem;" controls>
         <source src="image/video_2022-12-11_17-49-52.mp4" type="video/mp4">
         Hello
     </video>
-    <img src="image/photo_2023-01-17_09-13-18.jpg" alt="Gallery" width="700" height="950">
+    <img src="image/photo_2023-01-17_09-13-18.jpg" alt="Gallery" style="width:43.75rem; height:59.375rem;">
 </body>
 </html>
