--- a/certficates.html
+++ b/certficates.html
@@ -24,38 +24,38 @@
 <body>
     <div class = "mycerts">
         <a href="image/c1.png">
-            <img class = "mycert1" src="image/c1.png" alt="Python Certificate" width="942" height="650" >
+            <img class = "mycert1" src="image/c1.png" alt="Python Certificate" style="width: 58.5rem; height: 44rem;">
         </a>
     </div>
 
     <div class = "mycerts">
         <a href="image/c2.png">
-        <img class = "mycert1" src="image/c2.png" alt="Python Certificate" width="940" height="650"></a>
+        <img class = "mycert1" src="image/c2.png" alt="Python Certificate" style="width: 58.5rem; height: 44rem;"></a>
     </div>
 
     <div class = "mycerts">
         <a href="image/g6.png">
-        <img class = "mycert1" src="image/g6.png" alt="Google Certificate" width="1182" height="850"></a>
+        <img class = "mycert1" src="image/g6.png" alt="Google Certificate" style="width: 117.2rem; height: 76rem;"></a>
     </div>
     
     <div class = "mycerts">
         <a href="image/c3.jpg">
-        <img class = "mycert1" src="image/c3.jpg" alt="Certificate" width="700" height="850"></a>
+        <img class = "mycert1" src="image/c3.jpg" alt="Certificate" style="width: 60rem; height: 80rem;"></a>
     </div>
 
     <div class = "mycerts">
         <a href="image/c4.jpg">
-        <img class = "mycert1" src="image/c4.jpg" alt="Certificate" width="650" height="800"></a>
+        <img class = "mycert1" src="image/c4.jpg" alt="Certificate" style="width: 57rem; height: 80rem;"></a>
     </div>
 
     <div class = "mycerts">
         <a href="image/c5.jpg">
-        <img class = "mycert1" src="image/c5.jpg" alt="Certificate" width="590" height="800"></a>
+        <img class = "mycert1" src="image/c5.jpg" alt="Certificate" style="width: 59rem; height: 80rem;"></a>
     </div>
 
     <div class = "mycerts">
         <a href="image/c6.jpg">
-        <img class = "mycert1" src="image/c6.jpg" alt="Certificate" width="600" height="800"></a>
+        <img class = "mycert1" src="image/c6.jpg" alt="Certificate" style="width: 58rem; height: 80rem;"></a>
     </div>
 
 </body>
